# knife

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
src/: args.rs  main.rs  mod.rs
src/commands/: mod.rs  output.rs  utils.rs
src/commands/aws/: arg.rs  error.rs  handler.rs  mod.rs  utils.rs
src/commands/aws/asg/: arg.rs  handler.rs
src/commands/aws/ec2/: arg.rs  handler.rs
src/commands/aws/elb/: arg.rs  handler.rs
src/commands/aws/route53/: arg.rs  handler.rs
src/commands/aws/ssm/: arg.rs  handler.rs
src/commands/aws/sso/: arg.rs  handler.rs  mod.rs
src/commands/aws/whoami/: arg.rs  handler.rs
src/commands/base64/: arg.rs  handler.rs
src/commands/echo/: arg.rs  handler.rs
src/commands/jwt/: arg.rs  handler.rs
src/shells/: mod.rs
