[package]
name = "knife"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.8"
dashmap = "6.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "util"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
http-body-util = "0.1"
jsonwebtoken = "9.3"
serde_json = "1.0.145"
parse_duration = "2.1.1"
base64 = "0.22.1"
aws-config = "1.8.7"
aws-sdk-sts = "1.87.0"
libc = "0.2"
aws-sdk-elasticloadbalancingv2 = "1.95.0"
urlencoding = "2.1"
clap_complete = "4.5.58"
aws-sdk-route53 = "1.97.0"
aws-sdk-ec2 = "1.172.0"
aws-sdk-autoscaling = "1.97.0"
aws-sdk-ssm = "1.97.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
aws-sdk-sso = "1.86.0"
ini = "1.3"
toml = "0.8"
ctrlc = "3.4"
console = "0.16.1"
